# mithril-rs

./: .gitignore  .restyled.yaml  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
codegen/: Cargo.toml
codegen/src/: endian.rs  lib.rs  transform.rs
core/: Cargo.toml
core/buf/: Cargo.toml
core/buf/src/: lib.rs  read.rs  write.rs
core/fs/: Cargo.toml
core/fs/examples/: dump_tiles.rs  serde.rs
core/fs/src/: archive.rs  compression.rs  defs.rs  error.rs  lib.rs
core/fs/src/defs/: entity.rs  item.rs  map.rs  object.rs
core/items/: Cargo.toml
core/items/src/: errors.rs  items.rs  lib.rs
core/net/: Cargo.toml
core/net/src/: buf.rs  codec.rs  jaggrab.rs  lib.rs  packet.rs  packets.rs
core/net/src/buf/: read.rs  write.rs
core/net/src/jaggrab/: errors.rs  file.rs  jaggrab_codec.rs  parser.rs
core/net/src/packets/: events.rs  game.rs  handshake.rs
core/net/src/packets/game/: region.rs  sync.rs
core/pos/: Cargo.toml
core/pos/src/: lib.rs
core/src/: lib.rs
core/text/: Cargo.toml
core/text/src/: lib.rs
server/: Cargo.toml
server/jaggrab/: Cargo.toml
server/jaggrab/src/: amethyst.rs  lib.rs  main.rs  standalone.rs
server/net/: Cargo.toml
server/net/src/: jaggrab_worker.rs  lib.rs  worker.rs
server/packets/: Cargo.toml
server/packets/src/: lib.rs
server/player/: Cargo.toml
server/player/src/: connect.rs  interact.rs  join.rs  lib.rs  movement.rs  objects.rs  systems.rs
server/player/src/systems/: disconnect.rs  movement.rs  poll_clients.rs
server/src/: lib.rs  main.rs  systems.rs
server/types/: Cargo.toml
server/types/src/: auth.rs  collision_detection.rs  components.rs  id_allocator.rs  inventory.rs  lib.rs  object_definitions.rs
server/types/src/components/: entity.rs  network.rs  object.rs  player.rs
src/: lib.rs  login_handler.rs  worker.rs
src/buf/: mod.rs  read.rs  write.rs
src/net/: codec.rs  login_handler.rs  mod.rs  worker.rs
src/net/packets/: game.rs  handshake.rs  mod.rs
src/util/: mod.rs  text.rs
