[package]
name = "mithril-server"
version = "0.1.0"
authors = ["Connor Spencer Harries <connor@harmony-labs.org.uk>"]
edition = "2018"
default-run = "mithril-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jaggrab"]
jaggrab = ["mithril-jaggrab"]
profiler = [
    "thread_profiler",
    "amethyst/profiler",
    "mithril-server-player/profiler",
    "mithril-server-net/profiler",
    "mithril-jaggrab/profiler",
]

[lib]
name = "mithril"

[dependencies]
mithril-server-player = { path = "player" }
mithril-server-types = { path = "types" }
mithril-server-net = { path = "net" }
mithril-core = { path = "../core" }

ahash = "0.3.8"
anyhow = "1.0"
log = "0.4"

[dependencies.amethyst]
version = "0.15"
default-features = false
features = ["empty", "network"]

[dependencies.mithril-jaggrab]
default-features = false
features = ["amethyst"]
path = "jaggrab"
optional = true

[dependencies.thread_profiler]
version = "0.3"
optional = true
