[package]
name = "mithril-fs"
version = "0.1.0"
authors = ["Connor Spencer Harries <connor@harmony-labs.org.uk>"]
edition = "2018"

[dependencies]
mithril-buf = { path = "../buf" }

thiserror = "1.0"
crc32fast = "1.2"
flate2 = "1.0"
memmap = "0.7"
bytes = "0.5"
bzip2 = "0.3"
log = "0.4"

[dev-dependencies]
ci_info = "*"
png = "*"