[package]
name = "mithril-net"
version = "0.1.0"
authors = ["Connor Spencer Harries <connor@harmony-labs.org.uk>"]
edition = "2018"

[features]
default = ["jaggrab"]
jaggrab = ["nom", "thiserror"]

[dependencies]
mithril-codegen = { path = "../../codegen" }
mithril-text = { path = "../text" }
mithril-pos = { path = "../pos" }
mithril-buf = { path = "../buf" }

tokio-util = { version = "0.3", features = ["codec"] }
rand_isaac = "0.2"
once_cell = "1.4"
anyhow = "1.0"
bytes = "0.5"
ahash = "0.3"
rand = "0.7"
log = "0.4"

# Future versions of mithril will move towards more verbose custom error types using thiserror,
# however for now we're only using it for JAGGRAB so mark it optional.
[dependencies.thiserror]
version = "1.0"
optional = true

[dependencies.nom]
version = "5.1"
optional = true