[package]
name = "mithril-server-net"
version = "0.1.0"
authors = ["Connor Spencer Harries <connor@harmony-labs.org.uk>"]
edition = "2018"

[features]
profiler = ["thread_profiler"]

[dependencies]
mithril-server-types = { path = "../types" }
mithril-core = { path = "../../core" }
anyhow = "1.0"
ahash = "0.3"
bytes = "0.5"
log = "0.4"

[dependencies.amethyst]
version = "0.15"
default-features = false
features = ["empty", "network"]

[dependencies.thread_profiler]
version = "0.3"
optional = true