[package]
name = "mithril-server-packets"
version = "0.1.0"
authors = ["Connor Spencer Harries <connor@harmony-labs.org.uk>"]
edition = "2018"

[dependencies]
mithril-core = { path = "../../core" }

parking_lot = "0.10"
num-traits = "0.2"
strum = "0.18"
ahash = "0.3"
legion = { git = "https://github.com/TomGillen/legion", rev = "e2c7363e0c059ec1a5fe659b6e50f09f8cdf9793" }