[package]
name = "mithril-server-player"
version = "0.1.0"
authors = ["Connor Spencer Harries <connor@harmony-labs.org.uk>"]
edition = "2018"

[dependencies]
mithril-server-packets = { path = "../packets" }
mithril-server-types = { path = "../types" }
mithril-server-net = { path = "../net" }
mithril-core = { path = "../../core" }

parking_lot = "0.10.2"
specs = "0.16"
log = "0.4"