[package]
name = "mithril-server-player"
version = "0.1.0"
authors = ["Connor Spencer Harries <connor@harmony-labs.org.uk>"]
edition = "2018"

[dependencies]
mithril-server-types = { path = "../types" }
mithril-server-net = { path = "../net" }
mithril-core = { path = "../../core" }

parking_lot = "0.10.2"
specs = { version = "0.16", features = ["shred-derive"] }
log = "0.4"
rand = "0.7"

[dependencies.amethyst]
version = "0.15"
default-features = false
features = ["empty", "network"]