[package]
name = "mithril-server-player"
version = "0.1.0"
authors = ["Connor Spencer Harries <connor@harmony-labs.org.uk>"]
edition = "2018"

[features]
profiler = ["thread_profiler"]

[dependencies]
mithril-server-types = { path = "../types" }
mithril-server-net = { path = "../net" }
mithril-core = { path = "../../core" }

ahash = "0.3.8"
indexmap = "1.4.0"
parking_lot = "0.10.2"
specs = { version = "0.16", features = ["shred-derive"] }
log = "0.4"
rand = "0.7"

[dependencies.amethyst]
version = "0.15"
default-features = false
features = ["empty", "network"]

[dependencies.thread_profiler]
version = "0.3"
optional = true

[dev-dependencies]
amethyst_test = "0.6.0"
