[package]
name = "mithril-server-types"
version = "0.1.0"
authors = ["Connor Spencer Harries <connor@harmony-labs.org.uk>"]
edition = "2018"

[dependencies]
mithril-core = { path = "../../core" }
specs = { version = "0.16", features = ["specs-derive"] }
parking_lot = "0.10"
derivative = "2.1"
flume = "0.7"
pathfinding = "2.0"
anyhow = "1.0"
ahash = "0.3"
rand = "0.7"
rand_isaac = "0.2"

[dev-dependencies]
ci_info = "*"